# schelling_graph

./: .gitignore  LICENSE.TXT  README.md  graph_definition.py  nb.ipynb  pyproject.toml  setup.py  text.html
docs/: schelling_simulation.html
docs/images/: schelling_simulation.html
schelling_graph/: __init__.py  graph.py  structures.py  tools.py  visualization.py
